app/assets/stylesheets/application.css.scss
html, body, div, p, h1, h2,
h3, h4, a, label, button, nav,
ul, li, span, strong {
  margin: 0;
  padding: 0;
  border: 0;

  font: inherit;
  text-align: inherit;;
  text-decoration: inherit;
  vertical-align: inherit;

  background: transparent;
}

ul, li {
  list-style: none;
}

a {
  text-decoration: none;
}

img {
  width: 100px;
  height: auto;
  display: block;
}

.group:after {
  content: "";
  display: block;
  clear: both;
}

h1, h2, h3, h4 {
  font-weight: bold;
}

html {
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  position: relative;
}

input[type="password"],
input[type="email"],
input[type="text"],
input[type="submit"],
textarea {
  display: block;
  border: 0;
  border-radius: 5px;
  outline: 0;
  -webkit-appearance: none;
  -moz-appearance: none;
  font-size: 14px;
}

button,
input[type="submit"] {
  cursor: pointer;
  outline: 0;
  border: 0;
  text-align: center;
}

body {
  font-family: sans-serif;
  background: rgb(0, 121, 191);
  color: #fff;
}

h2 {
  font-size: 17px;
}

// sign in form
.signin-form {
  padding: 25px 50px;
  margin: 0 auto;
  width: 280px;
}

.signin-form input,
.signin-form label {
  display: block;
  margin: 10px 0;
}

.signin-form input {
  width: 275px;
  padding: 10px;
  font-size: 16px;
  border-radius: 5px;
}

.signin-form h1 {
  font-size: 24px;
}

.signin-form .submit {
  margin-top: 15px;
  width: 297px;
}

// navbar

header {
  background: rgb(21, 110, 165);
}

.logo {
  font-size: 23px;
  font-family: "Pacifico";
  opacity: 0.65;
  float: left;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  line-height: 45px;
  color: #fff;
}

.logo:hover {
  opacity: 0.85;
}

.search-bar {
  float: left;
  height: 32px;
  width: 180px;
  overflow-x: scroll;
  padding-left: 35px;
  background: rgba(255,255,255,.3);
  margin: 5px 5px;
}

.icon-search {
  position: absolute;
  top: 14px;
  left: 17px;
}

.main-list {
  float: right;
  font-size: 16px;
}

.main-list li {
  padding: 8px 10px;
  float: left;
  background: rgba(255,255,255,.3);
  border-radius: 3px;
  margin: 5px 4px;
  cursor: pointer;
}

.main-list li:hover,
.search-bar:hover {
  background: rgba(255,255,255,.4);
}

// boards_index.css
.backdrop {
  min-height: 500px;
  height: calc(100vh - 46px);
  overflow-y: hidden;
}

.boards-index {
  padding: 28px 6px;
  width: 80%;
  position: relative;
  left: 50%;
  transform: translateX(-50%);
}

.boards-index h2 {
  color: #4a4a4a;
  padding: 18px 0 12px 12px;
}

.icon-user {
  margin-right: 12px;
  color: #A1A1A1;
}

.white-back {
  background: #FAFAFA;
}

.boards-list-item {
  position: relative;
  float: left;
}

.boards-list-item > a {
  background: #2F6E9F;
  border-radius: 3px;
  box-sizing: border-box;
  padding: 10px;
  float: left;
  margin: 0 15px 15px 0;
  width: 210px;
  height: 100px;
  color: #fff;
  font-weight: bold;
}

.boards-list-item > a:hover {
  background: #225B87;
}

.icon-setting {
  position: absolute;
  width: 15px;
  right: 20px;
  top: 5px;
  cursor: pointer;
}

.delete-board {
  font-size: 14px;
  padding: 5px 8px;
  position: absolute;
  right: 15px;
  top: -30px;
  background: #4a4a4a;
  color: #fff;
  border-radius: 3px;
}

.delete-board:after {
  content: "";
  display: block;
  width: 10px;
  height: 5px;
  box-sizing: border-box;
  border-top: 5px solid #4a4a4a;
  border-right: 5px solid transparent;
  border-left: 5px solid transparent;
  position: absolute;
  bottom: -5px;
  right: 8px;
}

.new-board {
  position: relative;
  float: left;
}

.add-board {
  background: #d9d9d9;
  color: #969696;
  border-radius: 3px;
  box-sizing: border-box;
  padding: 10px;
  text-align: center;
  width: 210px;
  height: 100px;
}

.add-board:hover {
  background: #CFCECE;
}

.close {
  position: absolute;
  top: 8px;
  right: 14px;
  line-height: 1;
  font-size: 20px;
  cursor: pointer;
}

.board-form {
  position: absolute;
  width: 280px;
  height: 150px;
  border-radius: 3px;
  box-shadow: 0px 0px 2px #000;
  color: #4a4a4a;
  padding: 10px;
}

.board-form > h4 {
  padding: 6px;
  margin-bottom: 10px;
  font-weight: 400;
  font-size: 14px;
  color: #B7B6B6;
  text-align: center;
  border-bottom: 1px #ccc solid;
}

.input label {
  font-weight: bold;
}

.input input {
  background: #ccc;
  width: 278px;
  height: 33px;
  box-sizing: border-box;
  padding: 5px 3px;
  margin: 5px 0;
  overflow-x: auto;
}

.input input:focus {
  background: #fff;
  border: 2px #0A84EE solid;
}

.submit {
  border: 0;
  padding: 10px 30px;
  margin: 10px;
  border-radius: 5px;
  background: #0b0;
  font-size: 14px;
  font-weight: bold;
  box-shadow: 0px 0px 3px #070;
  color: #fff;
  position: relative;
}

.submit:active {
  top: 3px;
  background: #0a0;
  box-shadow: none;
}

// boardshow.css

#main {
  position: relative;
  display: block;
  min-height: 500px;
}

.board-detail {
  white-space: nowrap;
  margin-bottom: 10px;
  padding-bottom: 10px;
  padding: 8px;
}

.board-header {
  padding: 8px 4px 8px 8px;
  height: auto;
}

.board-detail > h2 {
  padding: 5px 10px;
  margin-bottom: 5px;
  border-radius: 3px;
  display: inline-block;
  cursor: pointer;
}

.board-detail > h2:hover {
  background: rgba(0,0,0,.12);
}

.hide {
  display: none;
}

.lists {
  overflow-y: hidden;
}

.list-wrapper {
  margin: 5px;
  display: block;
  float: left;
  width: 270px;
  height: 100vh;
}

.list-item {
  border-radius: 3px;
  color: #4a4a4a;
  background: #eee;
  padding: 11px 0 0 0;
}

.list-item > h4 {
  margin: 0 11px;
}

.is-dragging {
  transform: rotate(5deg);
}

.new-list {
  position: relative;
  float: left;
  margin: 5px;
  width: 270px;
  height: auto;
  border-radius: 3px;
}

.list-form {
  background: #eee;
  float: left;
  position: absolute;
  padding: 3px 0;
}

.list-form input {
  width: 260px;
}

.list-form input:focus {
  background: #eee;
  border: 1px #ccc solid;
}

.list-form input,
.list-form .submit {
  margin: 1px 5px 3px 5px;
}

.cards-index {
  margin: 11px 11px 0 11px;
}

.cards-list-item > h4 {
  font-size: 14px;
  background: #fff;
  border-radius: 3px;
  height: 36px;
  box-sizing: border-box;
  padding: 1px 5px;
  margin-top: 5px;
  border-bottom: 1px #ccc solid;
  cursor: pointer;
}

button.add-list {
  color: rgba(255,255,255,.7);
  opacity: 0.75;
  background: rgba(0,0,0,.12);
  border: 0;
  padding: 10px;
  border-radius: 3px;
  width: 270px;
  float: left;
  margin: 5px;
  box-sizing: border-box;
  position: relative;
}

button.add-list:hover {
  background: #00404d;
}

button.add-card {
  width: 100%;
  color: #8f8f8f;
  text-align: left;
  background: transparent;
  border: 0;
  font-size: 14px;
  padding: 11px;
}

.new-card-title {
  height: 70px;
  width: 248px;
  margin: auto;
  overflow: auto;
}

button.add-card:hover {
  color: #4a4a4a;
  text-decoration: underline;
  background: #d9d9d9;
}

input[type=text]{
  outline: 0;
  display: block;
  border: 0 0 1px 0 #ccc solid;
  color: #000;
}

.modal-back {
  position: absolute;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(0, 0, 0, 0.8);
}

.modal-card-form {
  position: fixed;
  top: 100px;
  left: 50%;
  transform: translateX(-50%);
  z-index: 2;
  width: 400px;
  height: 250px;
  color: #000;
  padding: 20px;
  border-radius: 5px;
  background: #eee;
}

.modal-card-form label {
  margin: 5px 0;
  display: block;
  cursor: pointer;
}

.modal-card-form textarea {
  margin: 5px 0;
  padding: 10px;
  font-size: 12px;
  width: 350px;
  height: 130px;
  overflow: auto;
}

